--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:tailwinds": "npx tailwindcss -i src/style.css -o public/style.css --watch"
+    "build": "npx tailwindcss -i src/style.css -o public/style.css --watch"
   },
   "keywords": [],
   "author": "",
